--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "fast-average-color": "^6.0.2",
+    "grapheme-splitter": "^1.0.4",
+    "quantize": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "rgbquant": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
