ui updated, broke web worker

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "quantize": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "rgbquant": "^1.1.2"
+    "rgbquant": "^1.1.2",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
