--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "rgbquant": "^1.1.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "webrtc-adapter": "^7.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
