--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "quantize": "^1.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "rgbquant": "^1.1.2",
