--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["stylelint-config-standard"],
+  "extends": ["stylelint-config-standard", "stylelint-config-tailwindcss"],
   "ignoreFiles": ["./build/**/*.css"]
 }
