--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "comlink": "^4.4.1",
     "fast-average-color": "^9.4.0",
     "grapheme-splitter": "^1.0.4",
@@ -22,13 +23,13 @@
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "rgbquant": "^1.1.2",
-    "styled-components": "^6.1.13",
     "webrtc-adapter": "^7.5.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.9.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
@@ -38,9 +39,12 @@
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.9",
+    "postcss": "^8.4.44",
     "prettier": "3.3.3",
     "stylelint": "^16.9.0",
     "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-tailwindcss": "^0.0.7",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.2",
     "vite-plugin-comlink": "^5.0.1"
   },
