--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "stylelint-config-tailwindcss": "^0.0.7",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.2",
-    "vite-plugin-comlink": "^5.0.1"
+    "vite-plugin-comlink": "^5.0.1",
+    "vite-plugin-pwa": "^0.21.0"
   },
   "lint-staged": {
     "*.css": "stylelint",
